# messenger

./: Readme.md  docker-compose.yml
src/: nginx.conf
src/backend/: Dockerfile  pyproject.toml
src/backend/messenger/: .env.example  alembic.ini  celery_worker.py  data_mappers.py  dependencies.py  main.py  security.py  settings.py  websocket_manager.py
src/backend/messenger/alembic/: env.py
src/backend/messenger/alembic/versions/: 19e678456382_add_foreign_keys_to_message_to_id_and_.py  22305d184476_crete_users_and_messages_tables.py  710f1592793e_add_active_column_to_user.py  9155eaa47d25_change_user_telegram_id_type_to_bigint.py
src/backend/messenger/db/: __init__.py
src/backend/messenger/models/: __init__.py  base.py  message.py  user.py
src/backend/messenger/repo/: __init__.py  chat_repository.py  message_repository.py  redis_session_repository.py  redis_tg_key_repository.py  session_repository.py  sql_alchemy_chat_repository.py  sql_alchemy_message_repository.py  sql_alchemy_user_repository.py  tg_key_repository.py  user_repository.py
src/backend/messenger/routes/: chats.py  messages.py  sessions.py  tg_key.py  users.py  websocket.py
src/backend/messenger/schema/: chat.py  message.py  session.py  tg_key.py  user.py
src/backend/messenger/service/: __init__.py  auth_service.py  chat_service.py  message_service.py  tg_key_service.py  user_service.py
src/backend/tests/: conftest.py
src/backend/tests/mock/: mock_session_repository.py  mock_user_repository.py
src/backend/tests/repo/: test_redis_session_repository.py  test_sql_alchemy_user_repository.py
src/backend/tests/service/: test_auth_service.py
src/frontend/: .env  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
src/frontend/src/: App.js  api.js
src/frontend/src/components/: ChatList.js  Chats.css  Chats.js  Login.js  MessageInput.js  (+2 more)
src/telegram_bot/: .env  .env.example  Dockerfile  pyproject.toml
src/telegram_bot/telegram_bot/: db.py  main.py  settings.py
