[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["witelokk <witelokk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
